--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "plop": "^2.7.6",
     "prettier": "^2.3.2",
     "react-is": "^17.0.2",
-    "react-test-renderer": "^17.0.2"
+    "react-test-renderer": "^17.0.2",
+    "storybook-preset-craco": "^0.0.6"
   }
 }
