--- a/package.json
+++ b/package.json
@@ -48,23 +48,23 @@
     "@reduxjs/toolkit": "^1.6.1",
     "@sentry/react": "^6.16.1",
     "@sentry/tracing": "^6.16.1",
-    "@xstate/inspect": "^0.4.1",
+    "@xstate/inspect": "^0.5.2",
     "@xstate/react": "^1.5.1",
-    "axios": "^0.21.1",
+    "axios": "^0.24.0",
     "date-fns": "^2.23.0",
     "formik": "^2.2.9",
     "formik-material-ui": "^3.0.1",
-    "github-markdown-css": "^4.0.0",
+    "github-markdown-css": "^5.1.0",
     "lodash": "^4.17.21",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
-    "react-markdown": "^6.0.2",
+    "react-markdown": "^7.1.1",
     "react-query": "^3.32.1",
     "react-redux": "^7.2.4",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
+    "react-router-dom": "^6.2.1",
+    "react-scripts": "^5.0.0",
     "standardized-audio-context": "^25.3.0",
     "styled-components": "^5.3.0",
     "typescript": "^4.3.5",
@@ -73,21 +73,21 @@
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
-    "@storybook/addon-actions": "^6.3.6",
-    "@storybook/addon-essentials": "^6.3.6",
-    "@storybook/addon-links": "^6.3.6",
-    "@storybook/addon-storyshots": "^6.3.6",
-    "@storybook/node-logger": "^6.3.6",
-    "@storybook/preset-create-react-app": "^3.2.0",
-    "@storybook/react": "^6.3.6",
+    "@storybook/addon-actions": "^6.5.0-alpha.5",
+    "@storybook/addon-essentials": "^6.5.0-alpha.5",
+    "@storybook/addon-links": "^6.5.0-alpha.5",
+    "@storybook/builder-webpack5": "^6.5.0-alpha.5",
+    "@storybook/manager-webpack5": "^6.5.0-alpha.5",
+    "@storybook/node-logger": "^6.5.0-alpha.5",
+    "@storybook/react": "^6.5.0-alpha.5",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/faker": "^5.5.7",
-    "@types/jest": "^26.0.24",
+    "@types/jest": "^27.0.3",
     "@types/jsonwebtoken": "^8.5.4",
     "@types/lodash": "^4.14.172",
-    "@types/node": "^16.4.3",
+    "@types/node": "^17.0.4",
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
     "@types/react-helmet": "^6.1.4",
@@ -96,25 +96,26 @@
     "@types/styled-components": "^5.1.11",
     "@types/webpack-env": "^1.16.0",
     "@types/yup": "^0.29.13",
-    "babel-plugin-polyfill-corejs2": "^0.2.2",
-    "babel-plugin-polyfill-regenerator": "^0.2.2",
-    "chromatic": "^5.9.2",
+    "babel-plugin-polyfill-corejs2": "^0.3.0",
+    "babel-plugin-polyfill-regenerator": "^0.3.0",
+    "chromatic": "^6.3.3",
     "cra-bundle-analyzer": "^0.1.0",
-    "eslint": "^7.31.0",
+    "eslint": "^8.5.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-import-resolver-typescript": "^2.5.0",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-jest": "^24.4.0",
-    "eslint-plugin-testing-library": "^4.10.1",
+    "eslint-plugin-jest": "^25.3.0",
+    "eslint-plugin-storybook": "^0.5.5",
+    "eslint-plugin-testing-library": "^5.0.1",
     "faker": "^5.5.3",
     "husky": "^7.0.1",
     "jest-fetch-mock": "^3.0.3",
     "jest-styled-components": "^7.0.5",
-    "lint-staged": "^11.1.1",
+    "lint-staged": "^12.1.4",
     "mockdate": "^3.0.5",
-    "msw": "^0.33.0",
+    "msw": "^0.36.3",
     "npm-run-all": "^4.1.5",
-    "plop": "^2.7.6",
+    "plop": "^3.0.5",
     "prettier": "^2.3.2",
     "react-is": "^17.0.2",
     "react-test-renderer": "^17.0.2",
