--- a/package.json
+++ b/package.json
@@ -50,12 +50,13 @@
     "@sentry/tracing": "^6.16.1",
     "@xstate/inspect": "^0.5.2",
     "@xstate/react": "^1.5.1",
-    "axios": "^0.24.0",
+    "axios": "^1.2.2",
     "date-fns": "^2.23.0",
     "formik": "^2.2.9",
     "formik-material-ui": "^3.0.1",
     "github-markdown-css": "^5.1.0",
     "idb-keyval": "^6.0.3",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "query-string": "^7.0.1",
     "react": "^17.0.2",
